# ocaml-priority-queues

./: .gitignore  AUTHORS.md  Makefile  README.md  dune-project  gitlog.txt  triage.opam
data/: waiting_room.csv
lib/: dune  patient.ml  patient.mli  priorityQueues.ml  priorityQueues.mli
test/: dune  test_a4.ml  test_triage.ml
